update(java): moving to java 11 with modules and jlink